--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -46,7 +46,7 @@
                         <tr id="trBody">
                             <td>
                                 <div id="page" class="container">
-                                    <div id="dvLeftContent" style="width: 70%;margin:auto;float:left ">
+                                    <div id="dvLeftContent" style="width: 70%;margin:auto;float:right ">
                                         <form id="form1" runat="server">
                                             <div >
                                                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
@@ -54,7 +54,7 @@
                                             </div>
                                         </form>
                                     </div>
-                                    <div id="dvRight" style="float: right">
+                                    <div id="dvRight" style="float: left">
                                         <div id="sidebar">
                                             <div id="dvLogin">
                                                 <table id="tblLogon" runat="server" style=" width: 100%">
