--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -26,8 +26,15 @@
                                     <div id="header" class="container">
                                         <div id="menu">
                                             <ul>
-                                                <li><a href="../Web%20Forms/frmHomePage.aspx" title="" >HOME</a></li>
-                                                <li><a href="../Web%20Forms/frmShipmentDetail.aspx" title="">SHIPMENT</a></li>
+                                                <li><a href="../Web%20Forms/frmHomePage.aspx" title="" >HOME</a>
+                                                    
+                                                </li>
+                                                <li><a href="../Web%20Forms/frmShipmentDetail.aspx" title="">SHIPMENT</a>
+                                                <ul>
+                                                        <li><a>Shipmetn Detail</a></li>
+                                                    </ul>
+
+                                                </li>
                                                 <li><a href="../Web%20Forms/frmDisableStation.aspx" title="">STATIONS</a></li>
                                                 <li><a href="#" title="">SETTING</a></li>
                                                 <li><a href="#" title="">REPORT</a></li>
@@ -56,7 +63,6 @@
                                             </div>
                                         </form>
                                     </div>
-
                                 </div>
                             </td>
                         </tr>
