Admin Home Page changed

--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -45,7 +45,8 @@
                                         <li><a href="../Web Forms/frmHomePage.aspx">HOME</a></li>
                                         <li><a href="#">SHIPMENT</a>
                                             <ul>
-                                                <li><a href="../Web Forms/frmShipmentDetail.aspx">Shipment Detail</a></li>
+                                                <li><a href="../Web Forms/frmShipmentDetail.aspx">Shipment Detail(Local)</a></li>
+                                                <li><a href="../Web Forms/frmShipmentDetailInfo.aspx">Shipment Detail(sage)</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#">STATION</a>
