--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -29,19 +29,25 @@
         <tr>
             <td>
                 <div>
-                    <table id="tblMainHome" runat="server" style="width: 100%">
+                    <table id="tblMainHome" runat="server" style="width: 99%">
                         <tr>
                             <td style="text-align: center">
                                 <h1 style="color: #0099FF; font-family: Arial"><span>SHIPMENT COMPTROLLER</span></h1>
                             </td>
                         </tr>
                         <tr id="trHeader">
-                            <td >
+                            <td style="background: rgba(0,0,0,0.70);">
                                 <div id="templatemo_menu" class="ddsmoothmenu">
-                                    
-                                    <ul><li><div style="width:300px" >&nbsp;</div></li>
-                                         <li><span><asp:Image ID="imglogo" runat="server" Height="70px" Width="147px" ImageUrl="~/Images/Kraus_Logo.jpg" style="margin-top: 0px" /></span></li>
-                                        <li><div style="width:200px" >&nbsp;</div></li>
+
+                                    <ul>
+                                        <li>
+                                            <div style="width: 200px">&nbsp;</div>
+                                        </li>
+                                        <li><span>
+                                            <asp:Image ID="imglogo" runat="server" Height="68px" Width="147px" ImageUrl="~/Images/Kraus_Logo.jpg" Style="margin-top: 0px" /></span></li>
+                                        <li>
+                                            <div style="width: 200px">&nbsp;</div>
+                                        </li>
                                         <li><a href="../Web Forms/frmHomePage.aspx">HOME</a></li>
                                         <li><a href="#">SHIPMENT</a>
                                             <ul>
@@ -49,35 +55,38 @@
                                                 <li><a href="../Web Forms/frmShipmentDetailInfo.aspx">Shipment Detail(sage)</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">STATION</a>
+                                        <li><a href="#">ADMIN</a>
                                             <ul>
-                                                <li><a href="../Web Forms/frmDisableStation.aspx">Active/InActive Staion</a></li>
+                                                <li><a href="../Web Forms/frmDisableStation.aspx">Users</a></li>
+                                                <li><a href="../Web Forms/frmDisableStation.aspx">Stations (Devices)</a></li>
+                                                <li><a href="../Web Forms/frmDisableStation.aspx">Roles</a></li>
+                                                <li><a href="../Web Forms/frmDisableStation.aspx">Log</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">ABOUT US</a></li>
-                                        <li><a href="#">ACCOUNT</a>
-                                            <ul>
-                                                <li><a href="../Web Forms/frmLogin.aspx">Logout</a></li>
-                                            </ul>
+                                        <li>
+                                            <div style="width: 320px; height: 68px;">
+                                                <table style="width:50%; float:right; height: 39px;" >
+                                                    <tr>
+                                                        <td class="tdRight">
+                                                            <img src="../../Images/UserIcon.png" style="height: 29px; width: 29px" /></td>
+                                                        <td style="text-align: right; font-weight: 700; border-right-width: thick; border-right-color: #0099FF; border-right-style: groove">
+                                                            <asp:Label ID="lblUserNameTop" runat="server" Text="UserName"></asp:Label>
+                                                        </td>
+                                                        <td>
+                                                            <div>
+                                                                 <button type="button" class="btn">Logout</button>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </div>
                                         </li>
                                     </ul>
-                                    <br style="clear: left" />
-                                </div>
-                            </td>
-                        </tr>
-                        <tr id="trSubMenu" style="visibility: hidden">
-                            <td style="text-align: center;">
-                                <div id="dvSubMenu" style="width: 60%; text-align: center; float: right;">
-                                    <table style="width: 100%; border: groove; border-color: #0099FF; border-bottom-width: thin; vertical-align: central;">
-                                        <tr>
-                                            <td style="text-align: center">&nbsp;
-                                            </td>
-                                        </tr>
-                                    </table>
                                 </div>
 
                             </td>
                         </tr>
+                      
                         <tr id="trBody">
                             <td>
                                 <div id="page" class="container">
