--- a/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
@@ -40,9 +40,9 @@
 }
 /** MENU */
 #templatemo_menu {
-	height: 70px;
-    background: rgba(0,0,0,0.70);
-    
+    height: 70px;
+    width: 1201px;
+
 }
 
 #menu {
