--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -22,6 +22,11 @@
         })
 
     </script>
+    <script>
+        function Logout() {
+            __doPostBack('btnLogout', 'postback')
+        }
+</script>
 </head>
 
 <body>
@@ -30,70 +35,71 @@
             <td>
                 <div>
                     <table id="tblMainHome" runat="server" style="width: 99%">
-                        <tr>
-                            <td style="text-align: center">
-                                <h1 style="color: #0099FF; font-family: Arial"><span>SHIPMENT COMPTROLLER</span></h1>
+                        <tr style="height: 50px; background: rgba(0,0,0,0.70);">
+                            <td>
+                                <table style="width: 80%; margin: 0px auto;">
+                                    <tr>
+                                        <td>
+                                            <img src="../../Images/Kraus_Logo.jpg" />
+                                        </td>
+                                        <td style="margin: 0px auto;">
+
+                                            <h1 style="color: #0099FF; font-family: Arial"><span>SHIPMENT COMPTROLLER</span></h1>
+
+                                        </td>
+                                        <td>
+                                            <table style="width: 50%; float: right;">
+                                                <tr>
+                                                    <td class="tdRight">
+                                                        <img src="../../Images/UserIcon.png" style="height: 29px; width: 29px" /></td>
+                                                    <td style="text-align: right; font-weight: 700; border-right-width: thick; border-right-color: #0099FF; border-right-style: groove">
+                                                        <asp:Label ID="lblUserNameTop" runat="server" Text="UserName"></asp:Label>
+                                                    </td>
+                                                    <td>
+                                                        <div>
+                                                            <button type="button" value="btnLogout" class="btn" onclick="Logout()">Logout</button>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
-                        <tr id="trHeader">
-                            <td style="background: rgba(0,0,0,0.70);">
-                                <div id="templatemo_menu" class="ddsmoothmenu">
-
-                                    <ul>
-                                        <li>
-                                            <div style="width: 200px">&nbsp;</div>
-                                        </li>
-                                        <li><span>
-                                            <asp:Image ID="imglogo" runat="server" Height="68px" Width="147px" ImageUrl="~/Images/Kraus_Logo.jpg" Style="margin-top: 0px" /></span></li>
-                                        <li>
-                                            <div style="width: 200px">&nbsp;</div>
-                                        </li>
-                                        <li><a href="../Web Forms/frmHomeIcon.aspx">HOME</a></li>
-                                        <li><a href="#">SHIPMENT</a>
-                                            <ul>
-                                                <li><a href="../Web Forms/frmShipmentDetail.aspx">Shipment Detail(Local)</a></li>
-                                                <li><a href="../Web Forms/frmShipmentDetailInfo.aspx">Shipment Detail(sage)</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">ADMIN</a>
-                                            <ul>
-                                                <li><a href="../Web Forms/frmDisableStation.aspx">Users</a></li>
-                                                <li><a href="../Web Forms/frmDisableStation.aspx">Stations (Devices)</a></li>
-                                                <li><a href="../Web Forms/frmDisableStation.aspx">Roles</a></li>
-                                                <li><a href="../Web Forms/frmDisableStation.aspx">Log</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <div style="width: 320px; height: 68px;">
-                                                <table style="width:50%; float:right; height: 39px;" >
-                                                    <tr>
-                                                        <td class="tdRight">
-                                                            <img src="../../Images/UserIcon.png" style="height: 29px; width: 29px" /></td>
-                                                        <td style="text-align: right; font-weight: 700; border-right-width: thick; border-right-color: #0099FF; border-right-style: groove">
-                                                            <asp:Label ID="lblUserNameTop" runat="server" Text="UserName"></asp:Label>
-                                                        </td>
-                                                        <td>
-                                                            <div>
-                                                                 <button type="button" class="btn">Logout</button>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                </table>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                            </td>
+                        <tr style="height:5px">
+                            <td>&nbsp</td>
                         </tr>
-                      
                         <tr id="trBody">
                             <td>
+
                                 <div id="page" class="container">
-                                    <div id="dvLeftContent" style="width: 90%; margin: auto; float: none">
+                                    <div>
                                         <form id="form1" runat="server">
-                                            <div>
+                                            <div style="width: 23%; float: left; background: #808080" >
+                                                <asp:TreeView ID="tvMenu" runat="server" ImageSet="Arrows"  OnSelectedNodeChanged="TreeView1_SelectedNodeChanged1">
+                                                    <HoverNodeStyle Font-Underline="True" ForeColor="#5555DD" />
+                                                    <Nodes>
+                                                        <asp:TreeNode  NavigateUrl="~/Forms/Web Forms/frmHomeIcon.aspx" ShowCheckBox="False" Text="Home" ToolTip="Home" Value="Home" Checked="True"></asp:TreeNode>
+                                                        <asp:TreeNode Text="Charts" ToolTip="Charts" Value="Charts"></asp:TreeNode>
+                                                        <asp:TreeNode Text="Shipment" Value="Shipment">
+                                                            <asp:TreeNode Text="Shipment Details" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
+                                                        </asp:TreeNode>
+                                                        <asp:TreeNode Text="Admin" Value="~/Forms/Web Forms/frmShipmentDetail.aspx">
+                                                            <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx"></asp:TreeNode>
+                                                            <asp:TreeNode Text="Station" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
+                                                            <asp:TreeNode Text="Role" Value="Role"></asp:TreeNode>
+                                                            <asp:TreeNode Text="Log" Value="Log"></asp:TreeNode>
+                                                        </asp:TreeNode>
+                                                    </Nodes>
+                                                    <NodeStyle Font-Names="Arial" Font-Size="13pt" Font-Bold="false" ForeColor="White" HorizontalPadding="5px" NodeSpacing="0px" VerticalPadding="0px" />
+                                                    <ParentNodeStyle Font-Bold="False" />
+                                                    <SelectedNodeStyle Font-Underline="True" ForeColor="#0099FF" HorizontalPadding="0px" VerticalPadding="0px" />
+                                                </asp:TreeView>
+                                            </div>
+                                            <div style="float: right; width: 77%">
                                                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+
                                                     <asp:ScriptManager ID="ScriptManager1" runat="server">
                                                     </asp:ScriptManager>
                                                 </asp:ContentPlaceHolder>
