--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <table id="tblMain" runat="server" style="width: 100%; height:900px; background-image: url(../../Images/main-bg.jpg)">
+    <table id="tblMain" runat="server" style="width: 100%; height: 900px; background-image: url(../../Images/main-bg.jpg)">
         <tr>
             <td>
                 <div>
@@ -25,13 +25,25 @@
                             <td style="text-align: center; color: black;" class="auto-style1">
                                 <div style="background-color: black">
                                     <table style="width: 100%">
-                                        <tr>
-                                            <td style="text-align:right" >
-                                                <asp:Image ID="imglogo" runat="server" Height="101px" ImageUrl="~/Images/Kraus_Logo.jpg" Width="207px" /></td>
-                                            <td style="text-align:left">
-                                                <h1 style="color: #0099FF"><span>SHIPMENT COMPTROLLER</span></h1>
+                                        <tr style="height: 50px; background: rgba(0,0,0,0.70);">
+                                            <td>
+                                                <table style="width: 80%; margin: 0px auto;">
+                                                    <tr>
+                                                        <td>
+                                                            <img src="../../Images/Kraus_Logo.jpg" />
+                                                        </td>
+                                                        <td style="margin: 0px auto;">
+
+                                                            <h1 style="color: #0099FF; font-family: Arial"><span>SHIPMENT COMPTROLLER</span></h1>
+
+                                                        </td>
+                                                        <td>&nbsp;
+                                                        </td>
+                                                    </tr>
+                                                </table>
                                             </td>
                                         </tr>
+
                                     </table>
 
                                 </div>
@@ -66,6 +78,6 @@
             </td>
         </tr>
     </table>
-        
+
 </body>
 </html>
