--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -22,13 +22,7 @@
         })
 
     </script>
-    <script>
-        function Logout() {
-            __doPostBack('btnLogout', 'postback')
-        }
-</script>
 </head>
-
 <body>
     <table id="tblMain" runat="server" style="width: 100%; height: 800px; background-image: url(../../Images/main-bg.jpg)">
         <tr>
@@ -44,7 +38,7 @@
                                         </td>
                                         <td style="margin: 0px auto;">
 
-                                            <h1 style="color: #0099FF; font-family: Arial"><span>SHIPMENT COMPTROLLER</span></h1>
+                                            <h1 style="color: #0099FF; font-family: Arial"><span>Fulfillment center</span></h1>
 
                                         </td>
                                         <td>
@@ -56,9 +50,7 @@
                                                         <asp:Label ID="lblUserNameTop" runat="server" Text="UserName"></asp:Label>
                                                     </td>
                                                     <td>
-                                                        <div>
-                                                            <button type="button" value="btnLogout" class="btn" onclick="Logout()">Logout</button>
-                                                        </div>
+                                                        <a style="color: whitesmoke; font-size: 15px;" href="../Web%20Forms/frmLogin.aspx">Logout</a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -67,7 +59,7 @@
                                 </table>
                             </td>
                         </tr>
-                        <tr style="height:5px">
+                        <tr style="height: 5px">
                             <td>&nbsp</td>
                         </tr>
                         <tr id="trBody">
@@ -76,20 +68,20 @@
                                 <div id="page" class="container">
                                     <div>
                                         <form id="form1" runat="server">
-                                            <div style="width: 23%; float: left; background: #808080" >
-                                                <asp:TreeView ID="tvMenu" runat="server" ImageSet="Arrows"  OnSelectedNodeChanged="TreeView1_SelectedNodeChanged1">
+                                            <div style="border-style: none groove none none; border-width: medium; border-color: #0099CC; float: left; vertical-align: central">
+                                                <asp:TreeView ID="tvMenu" runat="server" ImageSet="Arrows" OnSelectedNodeChanged="TreeView1_SelectedNodeChanged1">
                                                     <HoverNodeStyle Font-Underline="True" ForeColor="#5555DD" />
                                                     <Nodes>
-                                                        <asp:TreeNode  NavigateUrl="~/Forms/Web Forms/frmHomeIcon.aspx" ShowCheckBox="False" Text="Home" ToolTip="Home" Value="Home" Checked="True"></asp:TreeNode>
-                                                        <asp:TreeNode Text="Charts" ToolTip="Charts" Value="Charts"></asp:TreeNode>
-                                                        <asp:TreeNode Text="Shipment" Value="Shipment">
+                                                        <asp:TreeNode ShowCheckBox="False" Text="Home" ToolTip="Home" Value="~/Forms/Web Forms/frmHomePage.aspx"></asp:TreeNode>
+                                                        <asp:TreeNode Text="Charts" ToolTip="Charts" Value="#"></asp:TreeNode>
+                                                        <asp:TreeNode Text="Shipment" Value="~/Forms/Web Forms/frmShipmentDetailInfo.aspx">
                                                             <asp:TreeNode Text="Shipment Details" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
                                                         </asp:TreeNode>
-                                                        <asp:TreeNode Text="Admin" Value="~/Forms/Web Forms/frmShipmentDetail.aspx">
+                                                        <asp:TreeNode Text="Admin" Value="#">
                                                             <asp:TreeNode Text="User" Value="~/Forms/Web Forms/frmUserInformation.aspx"></asp:TreeNode>
-                                                            <asp:TreeNode Text="Station" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
-                                                            <asp:TreeNode Text="Role" Value="Role"></asp:TreeNode>
-                                                            <asp:TreeNode Text="Log" Value="Log"></asp:TreeNode>
+                                                            <asp:TreeNode Text="Station" Value="~/Forms/Web Forms/frmDisableStation.aspx"></asp:TreeNode>
+                                                            <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
+                                                            <asp:TreeNode Text="Log" Value="#"></asp:TreeNode>
                                                         </asp:TreeNode>
                                                     </Nodes>
                                                     <NodeStyle Font-Names="Arial" Font-Size="13pt" Font-Bold="false" ForeColor="White" HorizontalPadding="5px" NodeSpacing="0px" VerticalPadding="0px" />
