page redirect on selected shipment ID
Show the detail information of selected shipment

--- a/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Themes/CSS/BlackCoffeeCSS.css
@@ -258,8 +258,9 @@ le
     font-family:Arial;
    color:black;
    font-size:13px;
-   width:150px;
+    margin-bottom: 0px;
 }
+
 .btn {
     border-color:#0099FF;
     border-width:medium;
