--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Home.Master
@@ -13,6 +13,10 @@
         .auto-style1 {
             height: 105px;
         }
+        .auto-style2 {
+            width: 143px;
+            height: 59px;
+        }
     </style>
 </head>
 <body>
@@ -30,8 +34,7 @@
                                                 <table style="width: 80%; margin: 0px auto;">
                                                     <tr>
                                                         <td>
-                                                            <img src="../../Images/Kraus_Logo.jpg" />
-                                                        </td>
+                                                            &nbsp;<img alt="" class="auto-style2" src="../../Images/logoKraus.png" /></td>
                                                         <td style="margin: 0px auto;">
 
                                                             <h1 style="color: #0099FF; font-family: Arial"><span>SHIPMENT COMPTROLLER</span></h1>
