--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -20,7 +20,7 @@
         })
 
     </script>
-    
+   
 </head>
 <body>
     <table id="tblMain" runat="server" style="width: 100%; height: 800px; background-image: url(../../Images/main-bg.jpg)">
@@ -69,7 +69,7 @@
                                                 <HoverNodeStyle Font-Underline="True" ForeColor="#5555DD" />
                                                 <Nodes>
                                                     <asp:TreeNode ShowCheckBox="False" Text="Home" ToolTip="Home" Value="~/Forms/Web Forms/frmHomePage.aspx"></asp:TreeNode>
-                                                    <asp:TreeNode Text="Charts" ToolTip="Charts" Value="~/Forms/Web Forms/WebForm1.aspx"></asp:TreeNode>
+                                                    <asp:TreeNode Text="Charts" ToolTip="Charts" Value="../Web Forms/frmChart.aspx"></asp:TreeNode>
                                                     <asp:TreeNode Text="Shipment" Value="~/Forms/Web Forms/frmShipmentInfoALl.aspx">
                                                         <asp:TreeNode Text="Shipment Search" Value="~/Forms/Web Forms/frmShipmentDetailSage.aspx"></asp:TreeNode>
                                                         <asp:TreeNode Text="Shipment Details" Value="~/Forms/Web Forms/frmShipmentDetail.aspx"></asp:TreeNode>
