--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -20,7 +20,7 @@
         })
 
     </script>
-   
+    
 </head>
 <body>
     <table id="tblMain" runat="server" style="width: 100%; height: 800px; background-image: url(../../Images/main-bg.jpg)">
@@ -81,13 +81,14 @@
                                                         <asp:TreeNode Text="Role" Value="#"></asp:TreeNode>
                                                         <asp:TreeNode Text="Log" Value="~/Forms/Web Forms/frmErrorLog.aspx"></asp:TreeNode>
                                                     </asp:TreeNode>
+                                                    <asp:TreeNode Text="Examplechart" Value="~/Forms/Web Forms/frmTrackShipment.aspx"></asp:TreeNode>
                                                 </Nodes>
                                                 <NodeStyle Font-Names="Arial" Font-Size="13pt" Font-Bold="false" ForeColor="White" HorizontalPadding="5px" NodeSpacing="0px" VerticalPadding="0px" />
                                                 <ParentNodeStyle Font-Bold="False" />
                                                 <SelectedNodeStyle Font-Underline="True" ForeColor="#0099FF" HorizontalPadding="0px" VerticalPadding="0px" />
                                             </asp:TreeView>
                                         </div>
-                                        <div style="float: right; width: 85%;">
+                                        <div style="float: right; width: 85%; ">
                                             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                                                 <asp:ScriptManager ID="ScriptManager1" runat="server">
                                                 </asp:ScriptManager>
